fixes headshot spacing

--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,10 @@ footer.page-footer {
   height: 250px;
 }
 
+.card-reveal{
+  color: black;
+}
+
 #headshot{
   height: 300px;
   width: 200px;
